# pulsar

./: .clang-tidy  .gitignore  ActorTemplate_8h_source.html  Actor_8h_source.html  Application_8hpp_source.html  AudioHelper_8h_source.html  AudioManager_8h_source.html  CMakeLists.txt  CameraManager_8h_source.html  ContactListener_8h_source.html  Contact_8h_source.html  DPIHandler_8hpp_source.html  Doxyfile  ECS_8h_source.html  Editor_8h_source.html  EngineUtils_8h_source.html  Engine_8h_source.html  EventBus_8h_source.html  Event_8h_source.html  Helper_8h_source.html  InputManager_8h_source.html  Log_8hpp_source.html  README.md  RaycastResult_8h_source.html  Raycaster_8h_source.html  Renderer_8h_source.html  ResourceManager_8h_source.html  Resources_8hpp_source.html  Rigidbody_8h_source.html  SceneManager_8h_source.html  TextEditor_8h_source.html  UI_8h_source.html  Window_8hpp_source.html  annotated.html  classActor-members.html  classActor.html  classActorTemplate-members.html  classActorTemplate.html  classApp_1_1Application-members.html  classApp_1_1Application.html  (+97 more)
.github/workflows/: doxygen-gh-pages.yml  release.yml
cmake/: CompilerWarnings.cmake  FindLua.cmake
docs/: CustomFeatureRoadmap.md  QuickStart.md
resources/: game.config  sdl_user_input.txt
resources/actor_templates/: falling_box.template  falling_circle.template
resources/component_types/: ConstantMovement.lua  Controller.lua  Donna.lua  DonnaAnimation.lua  Enemy.lua  Fireball.lua  GameManager.lua  Hud.lua  KeyboardControl.lua  Launcher.lua  MovingBackground.lua  PlayAudio.lua  Projectile.lua  SpriteRenderer.lua
resources/scenes/: basic.scene
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  searchdata.js
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/App/: Main.cpp
src/engine/: CMakeLists.txt
src/engine/Core/: Actor.cpp  Actor.h  ActorTemplate.cpp  ActorTemplate.h  Application.cpp  Application.hpp  AudioHelper.h  AudioManager.cpp  AudioManager.h  CameraManager.cpp  CameraManager.h  Contact.h  ContactListener.cpp  ContactListener.h  ECS.cpp  ECS.h  Editor.cpp  Editor.h  Engine.cpp  Engine.h  EngineUtils.h  Event.cpp  Event.h  EventBus.cpp  EventBus.h  Helper.h  InputManager.cpp  InputManager.h  RaycastResult.h  Raycaster.cpp  Raycaster.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Resources.hpp  Rigidbody.cpp  Rigidbody.h  SceneManager.cpp  SceneManager.h  (+6 more)
src/engine/Platform/Mac/: Resources.cpp
src/settings/: CMakeLists.txt
src/tests/: CMakeLists.txt
